--- a/app/src/main/res/layout/activity_provisioning_page2.xml
+++ b/app/src/main/res/layout/activity_provisioning_page2.xml
@@ -18,11 +18,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.26" />
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/wizard_page_2_wifi_network_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="96dp"
+        tools:listitem="@layout/discovered_ap_list_item_layout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
